# define-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.Md
src/: lib.rs  lib.rs.bk  main.rs  main.rs.bk
src/dictionaries/: example.rs  example.rs.bk  mod.rs  urban.rs  wordnik.rs  wordnik.rs.bk
src/thesaureses/: mod.rs  mod.rs.bk  wordnik.rs
