[package]
authors = ["SethDusek <shibe@openmailbox.org>"]
name = "define"
version = "0.1.0"

[dependencies]
crossbeam = "0.2.8"
curl = "0.2.16"
num_cpus = "0.2.11"
serde = "*"
serde_json = "*"
serde_macros = "*"

[dependencies.getopts]
git = "https://github.com/SethDusek/getopts.git"

[profile]

[profile.dev]
codegen-units = 4
