[package]
authors = ["SethDusek <shibe@openmailbox.org>"]
name = "define"
version = "0.1.0"

[dependencies]
curl = "0.2.16"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"

[dependencies.crossbeam]
optional = true
version = "0.2.8"

[dependencies.getopts]
git = "https://github.com/SethDusek/getopts.git"

[dependencies.num_cpus]
optional = true
version = "0.2.11"

[features]
threaded = ["crossbeam", "num_cpus"]

[profile]

[profile.dev]
codegen-units = 4
